compiler/testData/diagnostics/tests/sourceCompatibility/noTopLevelSealedInheritance.kt
// !LANGUAGE: -TopLevelSealedInheritance

sealed class Base

class Derived : <!SEALED_SUPERTYPE!>Base<!>()
